@@ -10,6 +10,8 @@ Date: ???
     - Added circuit connectors to all machines (1114)
     - Added some trigger techs to divide up the research tree (1165)
     - Update recipes for components from Bob's Electronics mod to use Angel's wires (1197)
+    - Rebalance recipes: Glass mixture, Cement mixture (1198)
+    - Rebalance Bob's recipes: Silicon nitride, Silicon carbide, Tungsten carbide, Copper tungsted (1198)
   Bugfixes:
     - Fixed coolant production graphs (1000)
     - Moved Cobalt Oxide 1 recipe from Ore processor to Chemical furnace (1006)
